<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/macAddressLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"

        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/mac_address"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxStrokeColor="@android:color/darker_gray"
        app:errorEnabled="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/usernameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/macAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxStrokeColor="@android:color/darker_gray"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/characteristicLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/macAddressLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/characteristicLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/characteristic"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxStrokeColor="@android:color/darker_gray"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/connectBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/characteristicEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectBtn"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:cornerRadius="6.5dp"
        app:layout_constraintBottom_toTopOf="@id/disconnectBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characteristicLayout"
        app:rippleColor="@color/white"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/disconnectBtn"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/disconnect"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:cornerRadius="6.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectBtn"
        app:rippleColor="@color/white"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />


</androidx.constraintlayout.widget.ConstraintLayout>